[project]
name = "gcore-api"
version = "0.1.0"
description = "Command-line tool for Gcore API integration"
authors = [
    {name = "DevopsX",email = "devopsx@example.com"}
]
readme = "README.md"
requires-python = "^3.9"
dependencies = [
    "click (>=8.1.8,<9.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "pyyaml (>=6.0.2,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"

